fix: 🐛 flickering of video player seek button on page load

--- a/src/components/toggle-switch/toggle-switch.module.scss
+++ b/src/components/toggle-switch/toggle-switch.module.scss
@@ -2,7 +2,7 @@
     --height: 2rem;
     --bg-on: var(--coral-100);
     --bg-off: var(--grey-300);
-    --thumb-clr: white;
+    --thumb-clr: var(--light);
     --duration: 100ms;
 
     height: var(--height);
